--- a/themes/default/src/index.scss
+++ b/themes/default/src/index.scss
@@ -1,3 +1,5 @@
+@import '@alifd/next/variables.scss';
+
 body {
   margin: 0;
   font-family: Roboto,"PingFang SC","Helvetica Neue",Arial,Helvetica,sans-serif;
