feat: support aboutme

--- a/themes/jinchan/src/index.scss
+++ b/themes/jinchan/src/index.scss
@@ -1,39 +1,35 @@
 @font-face {
   font-family: "Roboto";
-  src: url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-thin.eot");
-  src: url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-thin.eot?#iefix") format("embedded-opentype"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-thin.woff2") format("woff2"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-thin.woff") format("woff"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-thin.ttf") format("truetype");
+  src: url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-thin.eot");
+  src: url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-thin.eot?#iefix") format("embedded-opentype"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-thin.woff2") format("woff2"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-thin.woff") format("woff"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-thin.ttf") format("truetype");
   font-weight: 200; }
 
 @font-face {
   font-family: "Roboto";
-  src: url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-light.eot");
-  src: url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-light.eot?#iefix") format("embedded-opentype"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-light.woff2") format("woff2"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-light.woff") format("woff"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-light.ttf") format("truetype");
+  src: url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-light.eot");
+  src: url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-light.eot?#iefix") format("embedded-opentype"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-light.woff2") format("woff2"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-light.woff") format("woff"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-light.ttf") format("truetype");
   font-weight: 300; }
 
 @font-face {
   font-family: "Roboto";
-  src: url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-regular.eot");
-  src: url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-regular.eot?#iefix") format("embedded-opentype"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-regular.woff2") format("woff2"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-regular.woff") format("woff"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-regular.ttf") format("truetype");
+  src: url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-regular.eot");
+  src: url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-regular.eot?#iefix") format("embedded-opentype"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-regular.woff2") format("woff2"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-regular.woff") format("woff"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-regular.ttf") format("truetype");
   font-weight: 400; }
 
 @font-face {
   font-family: "Roboto";
-  src: url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-medium.eot");
-  src: url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-medium.eot?#iefix") format("embedded-opentype"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-medium.woff2") format("woff2"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-medium.woff") format("woff"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-medium.ttf") format("truetype");
+  src: url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-medium.eot");
+  src: url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-medium.eot?#iefix") format("embedded-opentype"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-medium.woff2") format("woff2"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-medium.woff") format("woff"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-medium.ttf") format("truetype");
   font-weight: 500; }
 
 @font-face {
   font-family: "Roboto";
-  src: url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-bold.eot");
-  src: url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-bold.eot?#iefix") format("embedded-opentype"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-bold.woff2") format("woff2"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-bold.woff") format("woff"), url("//i.alicdn.com/artascope-font/20160419204543/font/roboto-bold.ttf") format("truetype");
+  src: url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-bold.eot");
+  src: url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-bold.eot?#iefix") format("embedded-opentype"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-bold.woff2") format("woff2"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-bold.woff") format("woff"), url("https://i.alicdn.com/artascope-font/20160419204543/font/roboto-bold.ttf") format("truetype");
   font-weight: 700; }
 body {
   margin: 0;
   font-family: Roboto,"PingFang SC","Helvetica Neue",Arial,Helvetica,sans-serif;
-}
-
-.layout {
-  padding: 10px;
 }
 
 @media (min-width: 500px) {
@@ -53,7 +49,7 @@ body {
     padding: 10px 0px;
     position: absolute;
     bottom: 0;
-    width: 42rem;
+    width: 100%;
     color: gray;
   
     a {
@@ -93,6 +89,10 @@ body {
 }
 
 @media (max-width: 600px) {
+
+  .layout {
+    padding: 20px;
+  }
 
   .footer {
     flex-flow: column nowrap;
