feat: 1. support link doc; 2. handle wrong locator

--- a/themes/default/src/index.scss
+++ b/themes/default/src/index.scss
@@ -112,7 +112,7 @@ body {
 .wiki h3,
 .wiki h4 {
   color: #0d1a26;
-  font-weight: normal;
+  font-weight: normal!important;
   line-height: 1;
 }
 
