--- a/themes/default/src/document-view/index.scss
+++ b/themes/default/src/document-view/index.scss
@@ -8,3 +8,9 @@
 .lake-engine-view ol[data-lake-indent="2"], .lake-engine-view ul[data-lake-indent="2"], .lake-engine ol[data-lake-indent="2"], .lake-engine ul[data-lake-indent="2"] {
   padding-left: 4em;
 }
+
+.document-anchor {
+  @media screen and (max-width: 1024px) {
+    display: none;
+  }
+}
