feat: promote theme jinchan

--- a/themes/jinchan/src/blog/index.scss
+++ b/themes/jinchan/src/blog/index.scss
@@ -23,10 +23,5 @@
 }
 
 .me-meta {
-  border-width: 1px;
-  border-bottom-style: solid;
-  border-top-style: none;
-  border-left-style: none;
-  border-right-style: none;
-  border-color: #DCDEE3; 
+  margin-bottom: 16px;
 }
