fix: fix wrong href of beian

--- a/themes/jinchan/src/posts/index.scss
+++ b/themes/jinchan/src/posts/index.scss
@@ -9,46 +9,48 @@ body {
     list-style: none;
     margin: 0px;
     padding: 0px;
-
-    li {
-      display: grid;
-      grid-template-columns: 1fr min-content;
-      column-gap: 5px;
-      padding-top: 12px;
-
-      a {
-        text-decoration: none;
-        outline: 0px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        transition: background-color 150ms ease-in 0s;
-        color: #050505;
-      }
-
-      time {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        margin: auto;
-        color: #777;
+    a {
+      text-decoration: none;
+      outline: 0px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      transition: background-color 150ms ease-in 0s;
+      color: #050505;
+      li {
+        display: grid;
+        grid-template-columns: 1fr min-content;
+        column-gap: 5px;
+        padding-top: 12px;
+        width: 100%;
+        
+  
+        time {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          margin: auto;
+          color: #777;
+        }
       }
     }
 
+
     @media (max-width: 500px) {
-      li {
-        margin: 0;
-        display: inline-block;
-        a {
-          transition: background-color 150ms ease-in 0s;
-          color: #050505;
-          text-decoration: none;
-          margin-right: 10px;
-        }
-        time {
-          text-align: left;
-          margin-left: 0;
-          font-size: inherit;
-          color: rgb(91, 91, 91);
+      a {
+        transition: background-color 150ms ease-in 0s;
+        color: #050505;
+        text-decoration: none;
+        margin-right: 10px;
+        li {
+          margin: 0;
+          display: inline-block;
+          
+          time {
+            text-align: left;
+            margin-left: 4px;
+            font-size: inherit;
+            color: rgb(91, 91, 91);
+          }
         }
       }
   
